--- a/05_FirstSteps/rest-spring-boot/src/main/resources/application.yml
+++ b/05_FirstSteps/rest-spring-boot/src/main/resources/application.yml
@@ -11,3 +11,6 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
       show-sql: false
+springdoc:
+  api-docs:
+    path: /docs
