--- a/05_FirstSteps/rest-spring-boot/src/main/resources/application.yml
+++ b/05_FirstSteps/rest-spring-boot/src/main/resources/application.yml
@@ -1,4 +1,9 @@
 spring:
+  servlet:
+    multipart:
+      enabled: true
+      max-file-size: 5MB
+      max-request-size: 10MB
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/springboot?useTimezone=true&serverTimezone=UTC
