--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,10 +28,14 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn clean package -Dmaven.test.skip
+      run: |
+        cd 05_FirstSteps/rest-spring-boot/
+        mvn clean package -Dmaven.test.skip
       
     - name: Run unit tests
-      run: mvn -Dtest=ExampleTest test
+      run: |
+        cd 05_FirstSteps/rest-spring-boot/
+        mvn -Dtest=ExampleTest test
 
     - name: Update dependency graph
       uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
